# coraldeck

./: .gitignore  Cargo.toml  PACKAGE.sh  TODO.md  build.rs
examples/: but.rs  kok.rs  kok2.rs  kok3.rs  kok4.rs  toml.rs
files/: config.json  config.toml
linux/: coraldeck.service
src/: actions.rs  config.rs  controller.rs  elgato.rs  error.rs  graphics.rs  lib.rs  main.rs  modules.rs  motu.rs  render.rs  sman.rs
src/graphics/: action.rs  boot.rs  button.rs  drawer.rs  fontloader.rs  startup.rs
src/graphics/boot/: bigletter.rs  loadseq.rs
src/modules/: camera.rs  keylight.rs  motu.rs
