[package]
name = "coraldeck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
streamdeck = "0.4.8"
tokio = { version = "1.10.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "multipart"] }
rand = "0.8.4"
thiserror = "1.0.28"
pretty_env_logger = "0.4.0"
log = "0.4.14"
zeroconf = "0.10.2"
elgato-keylight = "0.5.0"
raqote = { git = "https://github.com/jrmuizel/raqote.git" }
font-kit = "0.10.1"
image = "0.23.14"
async-trait = "0.1.51"
futures = "0.3.17"
lazy_static = "1.4.0"
big_s = "1.0.2"
blackmagic-camera-control = "0.2.1"
toml = "0.5.8"
automod = { git = "https://github.com/ben0x539/automod.git"}

[build-dependencies]
codegen = "0.1.3"

